# qna_api

./: .env  Cargo.toml
migrations/: 20221203231817_setup.down.sql  20221203231817_setup.up.sql
src/: dto.rs  handlers.rs  main.rs  persistance.rs
